--- a/comics/templates/nosotros.html
+++ b/comics/templates/nosotros.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -18,27 +18,27 @@
     </div>
 
     <div class="navbar">
-        <a href="index.html">Inicio</a>
-        <a href="nosotros.html">Nosotros</a>
-        <a href="personajes.html">Personajes</a>
-        <a href="productos.html">Productos</a>
+        <a href="{% url 'index' %}">Inicio</a>
+        <a href="{% url 'nosotros' %}">Nosotros</a>
+        <a href="{% url 'personajes' %}">Personajes</a>
+        <a href="{% url 'productos' %}">Productos</a>
         <div class="register-button">
-          <a href="registro.html">Regístrate</a>
+          <a href="{% url 'registro' %}">Regístrate</a>
         </div>
-        <a href="carrito.html"><img src="assets/img/carrito.png" alt="carrito"><span id="cuenta-carrito">0</span></a>
+        <a href="{% url 'carrito' %}"><img src="{% static 'assets/img/carrito.png' %}" alt="carrito"><span id="cuenta-carrito">0</span></a>
       </div>
 
     <div class="container-fluid text-center">
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/img/supeman.png" class="d-block w-100" alt="...">
+                    <img src="{% static 'assets/img/supeman.png' %}" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/joker.png" class="d-block w-100" alt="...">
+                    <img src="{% static 'assets/img/joker.png' %}" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/one pice.png" class="d-block w-100" alt="...">
+                    <img src="{% static 'assets/img/one pice.png' %}" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
